test/files/neg/t5903e/Test_2.scala
class C {
  import Interpolation._
  42 match {
    case t"$x" => println(x)
  }
}
